# mesh-simplifier

./: .gitignore  CMakeLists.txt  README.md  simplify.cpp
